--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 	<div class="wrapper">
 		<div class="heading">
-			<h1>I, Hill Dong, am a CSP student of Ayala High School and rarely a Swag Master</h1>
+			<h1>This is Hill's Homepage</h1>
 		</div>
 		<div class="navigation">
 			<a href="index.html">Home</a>
@@ -19,7 +19,7 @@
 		<div class="content">
 			<ul> Welcome to my webpage. Feel free to navigate its heavily limited boundaries</ul>
 			<p> In CSP I am learning certain concepts that can be taught to people like me that know little to nothing about the principles of computers</p>
-			<img src="index/images/Capture.png" height="250">
+			<img src="index/images/Capture.PNG" height="250">
 			<p> Please navigate over to my portfolio to view my projects. Also it's less laggy over there! </p>
 		</div>
 		<div class="sidebar">
