--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@
 		<div class="sidebar">
 			<h2>Scratch 1.1.7</h2>
 				<a href="https://scratch.mit.edu/projects/119948101/">
-					<img src="portfolio/images/scratchstory.png" width="150" height="100">
+					<img src="portfolio/images/scratchstory.PNG" width="150" height="100">
 				</a>
 				<li> Click the picture above to view a Scratch project made by Myron Phan and me that utilizes multiple variables to make a story/game.</li>
 				<a href="https://docs.google.com/spreadsheets/d/13jxeTyCZR6ki4IR2zTyCw50LlJzvAAtKM9qagy2pwyw/edit?usp=sharing">Click here to view the complementary backlog describing the project</a>
 			<h2>Python 1.3</h2>
 				<a href="https://repl.it/DcMl/28">
-					<img src="portfolio/images/pythonstory.png" width="150" height="100">
+					<img src="portfolio/images/pythonstory.PNG" width="150" height="100">
 				</a>
 				<li> Click the above to view an Python Interactive English Project made by Delvin Lee and me. It utilizes user input so have fun with it!</li>
 				<a href="https://drive.google.com/file/d/0B3tx2gIx02XFbWIteThnS3pRQ1k/view?usp=sharing"> Click here to view a flowchart that describes the various decisions in the project.</a>
