--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 				<a href="https://repl.it/DskI/194">Click here to view an app created using Python. It is more complicated compared to the other projects and is over a 100 lines of code!
 					<img src="portfolio/images/appproject.PNG" width="150" height="100">
 			<h2>Python 3.2.7</h2>
-				<a href="/portfolio/3.2.7 HDong and LRobbins .zip">
+				<a href="/portfolio/3.2.7 HDong and LRobbins .zip">Click here to view an graph that was coded on Python that uses a scatterplot to determine if there is any correlation between abortion and crime!
 					<img src="portfolio/images/graph.PNG" width="150" height="100">
 				</a>
 		</div>
