--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,16 @@
 			<h2>App Project</h2>
 				<a href="https://repl.it/DskI/194">Click here to view an app created using Python. It is more complicated compared to the other projects and is over a 100 lines of code!
 					<img src="portfolio/images/appproject.PNG" width="150" height="100">
+				</a>
 			<h2>Python 3.2.7</h2>
 				<a href="/portfolio/3.2.7 HDong and LRobbins .zip">Click here to view an graph that was coded on Python that uses a scatterplot to determine if there is any correlation between abortion and crime!
 					<img src="portfolio/images/graph.PNG" width="150" height="100">
 				</a>
+			<h2>NetLogo 4.2.3</h2>
+				<a href="/portfolio/4.2.3 HDong & HRaman.zip">Presenting a simulation that simulates that bubonic plague spreading through a small town in Europe during the Middle Ages.
+					<img src="portfolio/images/blackdeath.gif" width="150" height="100">
+				</a> 
+					
 		</div>
 		<div class="footer">
 		</div>
